//Define what the customer is supposed to do
syntax = "proto3";

import "protos/utils.proto"; 

option go_package = "github.com/Banana-no-ana/support-ticket-tycoon/backend/protos";
package case;

message Case {
    int32 caseID = 1;
    string Status = 2; 
    int32 Assignee = 3; 
    int32 CustomerID = 4;     //Which customer is it
    int32 CurrentStage = 5; 
    repeated CaseStage CaseStages = 6; 
    int32 CustomerSentiment = 7; //Customer's current sentiment of the case (range between 1, 2, 3, 4, 5 (5 being happy))
}


message CaseStage {
    int32 StageID = 1; 
    utils.SkillEnum Type = 2; 
    string Status = 3; //Completed, vs In-progress 
    int32  Difficulty = 4; //1-5 Set by the customer. 
    int32  Totalwork = 5; //Total amount of work to be done. triage and comms have less work, while research has more. 
    int32  Completedwork = 6; //How much work has been compelted so far.   
}
